# visio-mobile

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-android.yml  build-desktop.yml  build-ios.yml
.maestro/: 01_app_launch.yaml  02_enter_room_url.yaml  04_join_room_with_bot.yaml  05_chat_flow.yaml  08_chat_comprehensive.yaml  run_all.yaml
android/app/: build.gradle.kts
android/fastlane/: Appfile  Fastfile
crates/visio-bot/: Cargo.toml
crates/visio-bot/src/: main.rs
crates/visio-desktop/: Cargo.toml  build.rs  tauri.conf.json
crates/visio-desktop/frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
crates/visio-desktop/frontend/e2e/: call-controls.spec.ts  chat.spec.ts  device-selection.spec.ts  home.spec.ts  navigation.spec.ts  screen-share.spec.ts  settings.spec.ts  tauri-mock.ts
crates/visio-desktop/frontend/src/: App.css  App.tsx
crates/visio-desktop/icons/: icon.icns
crates/visio-desktop/src/: audio_cpal.rs  audio_engine.rs  audio_linux.rs  audio_macos.rs  audio_windows.rs  camera_linux.rs  camera_linux_convert.rs  camera_linux_pipewire.rs  camera_linux_v4l2.rs  camera_macos.rs  lib.rs  noise_reduction.rs  screen_audio_macos.rs  screen_capture.rs
crates/visio-desktop/src/camera_linux/: mod.rs  pipewire_backend.rs  v4l2.rs
crates/visio-ffi/: Cargo.toml
docs/: e2e-testing.md
docs/plans/: 2026-03-04-in-call-settings-panel-design.md  2026-03-07-oidc-authentication-design.md  2026-03-08-live-subtitles-design.md  2026-03-08-live-subtitles-implementation.md  (+4 more)
flatpak/: .gitignore  build-flatpak.sh  io.visio.desktop.desktop  io.visio.desktop.metainfo.xml  io.visio.desktop.yml
i18n/: de.json  en.json  es.json  fr.json  it.json  nl.json
ios/fastlane/: Fastfile
scripts/: download-test-media.sh  run-cross-platform-e2e.sh  run-maestro-tests.sh  run-playwright-tests.sh
(+103 files in other folders)
