[package]
name = "visio-bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "visio-bot"
path = "src/main.rs"

[dependencies]
visio-core = { path = "../visio-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
livekit = { workspace = true, features = ["rustls-tls-webpki-roots"] }
livekit-api = { workspace = true }
clap = { version = "4", features = ["derive"] }
