[package]
name = "visio-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
visio-core = { path = "../visio-core" }
visio-ffi = { path = "../visio-ffi" }
visio-video = { path = "../visio-video" }
livekit = { workspace = true }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "6"
cpal = "0.15"
tauri-plugin-deep-link = "2"
sys-locale = "0.3"
open = "5"
xcap = "0.9"
image = "0.25"
base64 = "0.22"
nnnoiseless = "0.5.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSObject", "NSString", "NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSRunningApplication", "NSBitmapImageRep", "NSImageRep"] }
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "=0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2"
libpulse-simple-binding = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
